Bug #223679 --> Mail imported from Outlook Express sometimes appear as unread when reopening the mail client